// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.QRCode className 1`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij my-classname"
  id="uuID"
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode default props 1`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="uuID"
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode id 1`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="myId"
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode mainAttrs 1`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="uuID"
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode name 1`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="uuID"
  name="myName"
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode noIndex 1`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij uu5-noindex"
  id="uuID"
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode noIndex 2`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="uuID"
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode noIndex 3`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="uuID"
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode noIndex 4`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij uu5-noindex"
  id="uuID"
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode style 1`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode style 2`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode style 3`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode style 4`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode tooltip 1`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="uuID"
  title="My Tooltip"
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
    />
  </React.Suspense>
</span>
`;

exports[`UU5.Bricks.QRCode value 1`] = `
<span
  className="uu5-bricks-q-r-code uu-1w73uij"
  id="uuID"
>
  <React.Suspense
    fallback=""
  >
    <React.Lazy
      level="L"
      renderAs="svg"
      size={128}
      value="https://uuos9.plus4u.net/uu-bookkitg01-main/78462435-ed11ec379073476db0aa295ad6c00178/book/page?code=uu5BricksQRCode"
    />
  </React.Suspense>
</span>
`;
